--- a/app/globals.css
+++ b/app/globals.css
@@ -3,12 +3,16 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --primary-custom: #f1cb30;
+  --primary-custom-100: #fbf7c6;
+  --primary-custom-200: #f9ec8f;
 }
 
-@media (prefers-color-scheme: dark) {
+::selection {
+  background: var(--primary-custom-200);
+}
+
+/* @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
@@ -24,4 +28,4 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-}
+} */
